feat(social-sleep-record): add privacy info
